# statement-tools

./: .gitignore  CLAUDE.md  FINDINGS.md  LICENSE  README.md  boi_statement_parser.py  cleanup_sensitive.ps1  pyproject.toml  redact_pdf.py  requirements-dev.txt  requirements.txt  statement_tools_cli.py
.claude/: settings.json
categorise/: __init__.py  builtin_rules.yaml  cli.py  engine.py  migrate_notebook_rules.py  rules.py
charts/: __init__.py  cli.py  insights.py  monthly.py  netting.py  overview.py  sankey.py  savings.py
docs/superpowers/specs/: 2026-07-09-build-orchestration.md  2026-07-09-categorisation-rules-engine-design.md  2026-07-09-legacy-baseline-hygiene-design.md  2026-07-09-overview-report-design.md  2026-07-09-public-sharing-design.md  2026-07-09-reporting-charts-design.md  2026-07-09-sankey-redesign-design.md  2026-07-09-statement-parser-abstraction-design.md
scripts/: parity_check.py
statement_parser/: __init__.py  canonical.py  cli.py  errors.py  profile.py  validate.py
statement_parser/engine/: __init__.py  csv_table.py  pdf_table.py  strategies.py
statement_parser/profiles/: boi_current.yaml  revolut_current.yaml
tests/: test_categorise_cli.py  test_categorise_engine.py  test_charts_cli.py  test_cli.py  test_csv_table.py  test_edge_cases.py  test_insights.py  test_migrate_notebook_rules.py  test_monthly.py  test_netting.py  test_overview.py  test_overview_cli.py  test_pdf_table.py  test_profile.py  test_sankey.py  test_savings.py  test_statement_tools_cli.py  test_triage_cli.py  test_triage_wizard.py  test_validate.py
tests/fixtures/: make_pdf.py  make_sankey_frame.py
triage/: __init__.py  cli.py  wizard.py
